--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent" android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -16,8 +15,17 @@
             android:scaleType="fitXY"
             android:src="@drawable/leaf_pic"/>
 
-        <ProgressBar android:layout_width="wrap_content" android:layout_height="wrap_content"
-                     android:layout_gravity="center_horizontal"
-                     android:paddingTop="40dp"/>
+        <!--<ProgressBar-->
+        <!--android:layout_width="wrap_content" android:layout_height="wrap_content"-->
+        <!--android:layout_gravity="center_horizontal"-->
+        <!--android:paddingTop="40dp"/>-->
+
+        <example.test.phong.leafpicclone.view.AVLoadingIndicatorView
+            android:id="@+id/indicator"
+            style="@style/AVLoadingIndicatorView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:paddingTop="40dp"/>
     </LinearLayout>
 </FrameLayout>
