--- a/app/src/main/res/layout/view_setting_basic.xml
+++ b/app/src/main/res/layout/view_setting_basic.xml
@@ -12,7 +12,7 @@
         android:paddingBottom="@dimen/sub_medium_spacing"
         android:paddingTop="@dimen/sub_medium_spacing"
         android:paddingRight="@dimen/medium_spacing">
-        <Theme
+        <example.test.phong.leafpicclone.view.themeable.ThemedSettingsIcon
             android:id="@+id/icon"
             android:layout_width="@dimen/icon_width_height"
             android:layout_height="@dimen/icon_width_height"
@@ -26,14 +26,14 @@
             android:layout_gravity="center_vertical"
             android:gravity="center_vertical"
             android:orientation="vertical">
-            <org.horaapps.leafpic.views.themeable.ThemedSettingsTitle
+            <example.test.phong.leafpicclone.view.themeable.ThemedSettingsTitle
                 android:id="@+id/title"
                 style="@style/TextAppearance.AppCompat.Subhead"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="@color/md_grey_200"
                 tools:text="title text goes here"/>
-            <org.horaapps.leafpic.views.themeable.ThemedSettingsCaption
+            <example.test.phong.leafpicclone.activities.ThemedSettingsCaption
                 android:id="@+id/caption"
                 style="@style/TextAppearance.AppCompat.Caption"
                 android:layout_width="match_parent"
