--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -8,4 +8,31 @@
         <attr name="indicatorName" format="string"/>
         <attr name="indicatorColor" format="color"/>
     </declare-styleable>
+
+    <declare-styleable name="PlaybackControlView">
+        <attr name="show_timeout"/>
+        <attr name="rewind_increment"/>
+        <attr name="fastforward_increment"/>
+    </declare-styleable>
+
+    <declare-styleable name="SettingBasic">
+        <attr name="settingIcon" format="string"/>
+        <attr name="settingTitle" format="reference"/>
+        <attr name="settingCaption" format="reference"/>
+        <attr name="settingMinApi" format="integer"/>
+    </declare-styleable>
+
+    <declare-styleable name="SettingWithSwitchView">
+        <attr name="settingIcon"/>
+        <attr name="settingTitle"/>
+        <attr name="settingCaption"/>
+        <attr name="settingMinApi"/>
+        <attr name="settingDefaultValue" format="boolean"/>
+        <attr name="settingPreferenceKey" format="reference"/>
+    </declare-styleable>
+
+    <declare-styleable name="NavigationEntry">
+        <attr name="itemText" format="reference"/>
+        <attr name="itemIcon" format="string"/>
+    </declare-styleable>
 </resources>
