--- a/app/src/main/res/layout/view_setting_basic.xml
+++ b/app/src/main/res/layout/view_setting_basic.xml
@@ -33,7 +33,7 @@
                 android:layout_height="wrap_content"
                 android:textColor="@color/md_grey_200"
                 tools:text="title text goes here"/>
-            <example.test.phong.leafpicclone.activities.ThemedSettingsCaption
+            <example.test.phong.leafpicclone.view.themeable.ThemedSettingsCaption
                 android:id="@+id/caption"
                 style="@style/TextAppearance.AppCompat.Caption"
                 android:layout_width="match_parent"
