--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,56 +1,64 @@
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                        xmlns:app="http://schemas.android.com/apk/res-auto"
-                                        xmlns:tools="http://schemas.android.com/tools"
-                                        android:id="@+id/drawer_layout"
-                                        android:layout_width="match_parent"
-                                        android:layout_height="match_parent"
-                                        tools:openDrawer="start">
-
-    <android.support.design.widget.CoordinatorLayout
-        android:id="@+id/coordinator_main_layout"
+<layout>
+    <data>
+        <variable name="isLoading" type="boolean"/>
+    </data>
+    <android.support.v4.widget.DrawerLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:theme="@style/Theme.AppCompat.NoActionBar">
+        tools:openDrawer="start">
 
-        <LinearLayout
+        <android.support.design.widget.CoordinatorLayout
+            android:id="@+id/coordinator_main_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:theme="@style/Theme.AppCompat.NoActionBar">
 
-            <include
-                android:id="@+id/toolbar"
-                layout="@layout/toolbar_layout" />
-
-            <FrameLayout
-                android:id="@+id/content"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-            <include layout="@layout/error_layout" />
+                <include
+                    android:id="@+id/toolbar"
+                    layout="@layout/toolbar_layout"/>
 
-        </LinearLayout>
+                <FrameLayout
+                    android:id="@+id/content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:visibleGone="@{!isLoading}"/>
 
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab_camera"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
-            android:layout_gravity="bottom|end"
-            android:layout_margin="@dimen/fab_layout_margin"
-            android:theme="@style/ThemeOverlay.AppCompat.Light"
-            app:borderWidth="@dimen/fab_border_width"
-            app:elevation="@dimen/fab_elevation"
-            app:layout_behavior="example.test.phong.leafpicclone.view.FabScrollBehaviour"
-            app:pressedTranslationZ="@dimen/fab_pressed_translationZ" />
+                <include
+                    layout="@layout/error_layout"
+                    app:visibleGone="@{isLoading}"/>
 
-    </android.support.design.widget.CoordinatorLayout>
+            </LinearLayout>
 
-    <example.test.phong.leafpicclone.view.navigation_drawer.NavigationDrawer
-        android:id="@+id/home_navigation_drawer"
-        android:layout_width="@dimen/nav_drawer_width"
-        android:layout_height="match_parent"
-        android:layout_gravity="start" />
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/fab_camera"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentEnd="true"
+                android:layout_gravity="bottom|end"
+                android:layout_margin="@dimen/fab_layout_margin"
+                android:theme="@style/ThemeOverlay.AppCompat.Light"
+                app:borderWidth="@dimen/fab_border_width"
+                app:elevation="@dimen/fab_elevation"
+                app:layout_behavior="example.test.phong.leafpicclone.view.FabScrollBehaviour"
+                app:pressedTranslationZ="@dimen/fab_pressed_translationZ"/>
 
-</android.support.v4.widget.DrawerLayout>
+        </android.support.design.widget.CoordinatorLayout>
+
+        <example.test.phong.leafpicclone.view.navigation_drawer.NavigationDrawer
+            android:id="@+id/home_navigation_drawer"
+            android:layout_width="@dimen/nav_drawer_width"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"/>
+    </android.support.v4.widget.DrawerLayout>
+</layout>
