add template classes

--- a/app/src/main/res/layout/toolbar_layout.xml
+++ b/app/src/main/res/layout/toolbar_layout.xml
@@ -2,6 +2,7 @@
 <example.test.phong.leafpicclone.view.themeable.ThemedToolbar
     xmlns:android="http://schemas.android.com/apk/res/android"
     style="@style/MyToolbar"
+    android:id="@+id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"/>
 
